--- a/.gitignore
+++ b/.gitignore
@@ -209,9 +209,6 @@ Backup*/
 UpgradeLog*.XML
 UpgradeLog*.htm
 
-# SQL Server files
-*.mdf
-*.ldf
 
 # Business Intelligence projects
 *.rdl.data
@@ -251,3 +248,6 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+#vim
+*.swp
