--- a/ToDo/ToDoApp/ToDoApp.csproj
+++ b/ToDo/ToDoApp/ToDoApp.csproj
@@ -105,6 +105,12 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoDataAccess\ToDoDataAccess.csproj">
+      <Project>{2c6b423b-ba9d-4b28-91a5-def93b642920}</Project>
+      <Name>ToDoDataAccess</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
