--- a/ToDo/ToDoDataAccess/App.config
+++ b/ToDo/ToDoDataAccess/App.config
@@ -14,4 +14,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+  <add name="ToDoEntities" connectionString="metadata=res://*/ToDoModel.csdl|res://*/ToDoModel.ssdl|res://*/ToDoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ToDo.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
