--- a/ToDo/ToDo.Tests/ToDo.Tests.csproj
+++ b/ToDo/ToDo.Tests/ToDo.Tests.csproj
@@ -36,7 +36,9 @@
       <HintPath>..\ToDoDataAccess\bin\Debug\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -55,8 +57,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestHelper.cs" />
     <Compile Include="TestToDoController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestToDoBatchController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ToDoApp\ToDoApp.csproj">
